--- a/ClientApp/src/app/quality-control/add-qctest/add-qctest.component.html
+++ b/ClientApp/src/app/quality-control/add-qctest/add-qctest.component.html
@@ -41,7 +41,7 @@
         <div class="form-inline">
           <mat-dialog-actions style="float:right">
             <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:20px;" (click)="clearTEST()">New</button>
-            <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:5px;" (click)="savettest(qtc.value,qtn.value,def.value)">Save</button>
+            <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:5px;" (click)="savettest(qtc.value,qtn.value,def.value);" matDialogClose>Save</button>
             <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:5px;" matDialogClose>Close</button>
           </mat-dialog-actions>
         </div>
