--- a/ClientApp/src/app/quality-control/add-qcunit/add-qcunit.component.html
+++ b/ClientApp/src/app/quality-control/add-qcunit/add-qcunit.component.html
@@ -25,7 +25,7 @@
         <div class="form-inline">
           <mat-dialog-actions style="float:right">
             <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:20px;" (click)="clearUNIT()">New</button>
-            <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:5px;" (click)="savetunit(qcun.value)">Save</button>
+            <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:5px;" (click)="savetunit(qcun.value);" matDialogClose>Save</button>
             <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:5px;" matDialogClose>Close</button>
           </mat-dialog-actions>
         </div>
