--- a/ClientApp/src/app/raw-material/search-inci-name/search-inci-name.component.html
+++ b/ClientApp/src/app/raw-material/search-inci-name/search-inci-name.component.html
@@ -110,7 +110,7 @@ Please provide a valid zip.
 
           <div class="form-inline">
             <label for="PDR #">CAS No</label>
-            <input style="width:60%;" type="text" class="form-control" [(ngModel)]="casnum"  name="casnumval" value="">
+            <input  disabled style="width:60%;" type="text" class="form-control" [(ngModel)]="casnum"  name="casnumval" value="">
 
 
 
