--- a/ClientApp/src/app/productization/new-che/new-che.component.html
+++ b/ClientApp/src/app/productization/new-che/new-che.component.html
@@ -6,8 +6,29 @@
 
 
   <div style="margin-left:1%;margin-top:1%; height:450px; overflow-y: auto;">
-   
+    <!--<table class="table table-hover table-bordered" style="margin-left: 10px; background-color: white" id="table" width="98%">
+    <thead>
+    <tr>
+    <th hidden scope="col">ParamId</th>
+    <th scope="col">Claim</th>
+    <th scope="col">Method</th>
+    <th scope="col">Limits</th>
+    <th scope="col">User Name</th>
+    </tr>
+    </thead>
+    <tbody>
 
+
+
+    <tr *ngFor="let chem_load of datachem; let i=index;" (click)="setchemvalues(chem_load)">
+    <td hidden>{{ chem_load.ParamId}}</td>
+    <td>{{ chem_load.Claim}}</td>
+    <td>{{ chem_load.Method}}</td>
+    <td style="background-color:lightblue" contenteditable="true">{{ chem_load.Limits}}</td>
+    <td>{{ chem_load.username}}</td>
+    </tr>
+    </tbody>
+    </table>-->
     <dx-data-grid id="gridContainer " style="width: 100%; height: 35rem;font-family:Verdana;font-style:normal;background-color:white"
                   (onSelectionChanged)="selectedChanged($event)"
                   [columnAutoWidth]="true"
@@ -62,22 +83,19 @@
 
     </dx-data-grid>
   </div>
+  <div style="background-color: #f6f5f1;">
+    <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:14%;" (click)="openaddchemistry()">Add New Param</button>
+    <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" (click)="SaveProperty()">Save</button>
+    <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:1%;" (click)="chemparamdelete()">Delete Param</button>
+    <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" matDialogClose>Back</button>
+  </div>
 </div>
-<div style="background-color: #f6f5f1;">
+<!--<div style="background-color: #f6f5f1;" >
 
 
-  <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:14%;" (click)="openaddchemistry()">Add New Param</button>
-  <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" (click)="SaveProperty()">Save</button>
-  <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:1%;" (click)="chemparamdelete()">Delete Param</button>
-  <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" matDialogClose>Back</button>
+            <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:14%;" (click)="openaddchemistry()">Add New Param</button>
+            <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" (click)="SaveProperty()">Save</button>
+            <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:1%;" (click)="chemparamdelete()">Delete Param</button>
+            <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" matDialogClose>Back</button>
 
-</div>
-
-
-
-
-
-
-
-
-
+        </div>-->
