--- a/ClientApp/src/app/productization/new-microb/new-microb.component.html
+++ b/ClientApp/src/app/productization/new-microb/new-microb.component.html
@@ -58,18 +58,17 @@
 
     </dx-data-grid>
   </div>
+  <div style="background-color: #f6f5f1;">
+    <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:14%;" (click)="openaddmicrobiology()">Add New Param</button>
+    <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" (click)="SaveProperty()">Save</button>
+    <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:1%;" (click)="microbioparamdelete()">Delete Param</button>
+    <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" matDialogClose>Back</button>
+  </div>
 </div>
 
-<div style="background-color: #f6f5f1;">
+<!--<div style="background-color: #f6f5f1;">
   <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:14%;" (click)="openaddmicrobiology()">Add New Param</button>
   <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" (click)="SaveProperty()">Save</button>
   <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:1%;" (click)="microbioparamdelete()">Delete Param</button>
   <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" matDialogClose>Back</button>
-</div>
-
-
-
-
-
-
-
+</div>-->
